--- a/EMC.html
+++ b/EMC.html
@@ -18,8 +18,7 @@
 
           <hr>
 
-          <iframe width="560" height="315" src="./EMC_files/5QzzeYHApV0.html" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen=""></iframe>
-           <p>In this video, I will explain what full stack development is and provide a detailed overview of the technologies used to build full stack web applications. Full stack web development involves building the front-end, back-end, and database components of a web application. This means that full stack developers are responsible for everything from designing the user interface to managing the server-side logic and database.
+         <iframe width="560" height="315" src="https://www.youtube.com/embed/FYErehuSuuw?si=jW6ts5sFZ91rcPSy" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>           <p>In this video, I will explain what full stack development is and provide a detailed overview of the technologies used to build full stack web applications. Full stack web development involves building the front-end, back-end, and database components of a web application. This means that full stack developers are responsible for everything from designing the user interface to managing the server-side logic and database.
         </p>
           
         <p>I will begin by discussing the key technologies and programming languages used in full stack web development, including HTML, CSS, JavaScript, Node.js, and various front-end frameworks such as React and Angular. I will then move on to discuss the server-side technologies like Python, Java and Node Js, and databases like MySQL, MongoDB, and Aws.</p>
